--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURI_Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://kurinoppe.github.io/kuri-portfolio/css/style.css">
+    <link rel="stylesheet" href="https://kurinoppe.github.io/kuri-portfolio/css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
     <script src="/js/top.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
@@ -84,7 +84,7 @@
                     <div class="works-list">
                         <figure class="works-item fade-in fade-in-up">
                             <a href="#" class="works-image">
-                                <img src="/image/kuri-portpolio.png" alt="">
+                                <img src="https://kurinoppe.github.io/kuri-portfolio/image/kuri-portpolio.png" alt="">
                             </a>
                             <div class="works-text-box">
                                 <div class="works-title">KURI's Portfolio</div>
@@ -94,7 +94,7 @@
                         
                         <figure class="works-item fade-in fade-in-up">
                             <a href="https://dainojiblog.xsrv.jp" class="works-image">
-                                <img src="/image/onsen.png" alt="">
+                                <img src="https://kurinoppe.github.io/kuri-portfolio/image/onsen.png" alt="">
                             </a>
                             <div class="works-text-box">
                                 <div class="works-title">温泉旅館サイト</div>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="about-contents">
                     <div class="about-image-con fade-in fade-in-up">
-                        <img class="about-image" src="/image/IMG_6474.PNG" alt="">
+                        <img class="about-image" src="https://kurinoppe.github.io/kuri-portfolio/image/IMG_6474.PNG" alt="">
                     </div>
                     <div class="about-desc fade-in fade-in-up">
                         <p>当サイトをご覧いただきありがとうございます。
@@ -219,7 +219,7 @@
                     <div class="skill-list">
                         <div class="skill-item">
                             <div class="skill-image-cont">
-                                <img class="skill" src="/image/HTML.jpg" alt="">
+                                <img class="skill" src="https://kurinoppe.github.io/kuri-portfolio/image/HTML.jpg" alt="">
                             </div>
                             <div class="skill-level">
                                 <div class="rate" data-rate="5"></div>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-image-cont">
-                                <img class="skill-image" src="/image/CSS.jpg" alt="">
+                                <img class="skill-image" src="https://kurinoppe.github.io/kuri-portfolio/image/CSS.jpg" alt="">
                             </div>
                             <div class="skill-level">
                                 <div class="rate" data-rate="5"></div>
@@ -235,7 +235,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-image-cont">
-                                <img class="skill-image" src="/image/Javascript.jpg" alt="">
+                                <img class="skill-image" src="https://kurinoppe.github.io/kuri-portfolio/image/Javascript.jpg" alt="">
                             </div>
                             <div class="skill-level">
                                 <div class="rate" data-rate="4"></div>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-image-cont">
-                                <img class="skill-image" src="/image/Wordpress.jpg" alt="">
+                                <img class="skill-image" src="https://kurinoppe.github.io/kuri-portfolio/image/Wordpress.jpg" alt="">
                             </div>
                             <div class="skill-level">
                                 <div class="rate" data-rate="5"></div>
@@ -251,7 +251,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-image-cont">
-                                <img class="skill-image" src="/image/xd.jpg" alt="">
+                                <img class="skill-image" src="https://kurinoppe.github.io/kuri-portfolio/image/xd.jpg" alt="">
                             </div>
                             <div class="skill-level">
                                 <div class="rate" data-rate="4"></div>
@@ -259,7 +259,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-image-cont">
-                                <img class="skill-image" src="/image/react(1).jpeg" alt="">
+                                <img class="skill-image" src="https://kurinoppe.github.io/kuri-portfolio/image/react(1).jpeg" alt="">
                             </div>
                             <div class="skill-level">
                                 <div class="rate" data-rate="3"></div>
