--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://kurinoppe.github.io/kuri-portfolio/css/style.css">
     <link rel="stylesheet" href="https://kurinoppe.github.io/kuri-portfolio/css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
-    <script src="/js/top.js"></script>
+    <script src="https://kurinoppe.github.io/kuri-portfolio/js/top.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
    <script>
    $(function() {
