--- a/index.html
+++ b/index.html
@@ -163,15 +163,27 @@
                 <div class="price-contents">
                     <ul class="price-list">
                         <li>コーディング(下層)</li>
-                        <li>1,0000円〜</li>
+                        <li>10,000円〜</li>
                     </ul>
                     <ul class="price-list">
-                        <li>コーディング(下層)</li>
-                        <li>1,0000円〜</li>
+                        <li>コーディング(トップ)</li>
+                        <li>15,000円〜</li>
                     </ul>
                     <ul class="price-list">
-                        <li>コーディング(下層)</li>
-                        <li>1,0000円〜</li>
+                        <li>コーディング(LP)</li>
+                        <li>35,000円〜</li>
+                    </ul>
+                    <ul class="price-list">
+                        <li>LP制作</li>
+                        <li>120,000円〜</li>
+                    </ul>
+                    <ul class="price-list">
+                        <li>テンプレートホームページ作成</li>
+                        <li>150,000円〜</li>
+                    </ul>
+                    <ul class="price-list">
+                        <li>オリジナルホームページ作成</li>
+                        <li>400,000円〜</li>
                     </ul>
                 </div>
                 <div class="price-tips">
