--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <div class="serv-title">コーディング代行</div>
                                 <div class="serv-text">
                                     お客様の希望に合わせて、1ページ単位からのコーディングや下層ページのみもお受け致します。
-                                    簡単なカスタマイズなどお気軽にお声がけください
+                                    簡単なカスタマイズなどお気軽にお声がけください。
                                 </div>
                             </div>
                         </div>
@@ -146,11 +146,16 @@
                                 <div class="serv-text">
                                     お客様のサービスの魅力を最大限に伝えるWebサイト制作をお手伝いいたします。
                                     最大限の効果を発揮できるサイト作りを一緒に実現しましょう。
-                                    保守・運用までサポートいたします
+                                    保守・運用までサポートいたします。
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="price-tips">
+                    <p class="tips-text">上記サービス以外もご相談いただければ対応いたします。
+                        <br>詳細はお問合せ時にご確認ください。些細なことでも気楽にご相談ください。
+                    </p>
+                </div>
                 </div>
         </section>
 
