--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <p class="desc">お問い合わせは、メールにてお願い致します。</p>
                 </div>
                 <div class="contact-contents">
-                    <span class="contact-ad">0ba7x015385241e@gmail.com</span>
+                    <span class="contact-ad">kurihara.w7@gmail.com</span>
                 </div>
             </div>
         </section>
